PyMaker/datas/object2/RawHTML/i16601/Python_DOC_referPages.learning-python-the-hard-way-exercise-1-syntaxerror-invalid-syntax.txt
<div class="post-text" itemprop="text">
<p>Extremely new to this so this is likely caused by my own inexperience, so apologizing in advance here.
I know this is said a lot on these questions but I'm trying to learn python using 'Learn python the hard way.'. 
I've become stuck on exercise 1: <a href="http://learnpythonthehardway.org/book/ex1.html" rel="nofollow">http://learnpythonthehardway.org/book/ex1.html</a></p>
<p>On windows we have to create a text file in notepad ++ called 'ex1.py' and run it in PowerShell using the command 'python ex1.py'.</p>
<p>Problem is every time I try, I get this error:</p>
<pre><code>File "ex1.py", line 1

   Print "Hello World!"
                      ^
SyntaxError: invalid syntax
</code></pre>
<p>These types of errors are mentioned on the tutorial page but it only explains they point out errors and to use what it says in the 'SyntaxError:' to search for the answer if what it says is too cryptic to understand. Why is the caret pointing towards the "? What am I doing wrong?</p>
<p>Any help would be greatly appreciated by this newbie.</p>
</div>
<div class="post-text" itemprop="text">
<p>Python is a case-sensitive language.  <a href="https://docs.python.org/2/reference/simple_stmts.html#grammar-token-print_stmt" rel="nofollow"><code>print</code></a> needs to be lowercase:</p>
<pre><code>print "Hello World!"
</code></pre>
<p>If you are using Python 3.x, you also need parenthesis because <a href="https://docs.python.org/3/library/functions.html#print" rel="nofollow"><code>print</code></a> is a function:</p>
<pre><code>print("Hello World!")
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>You have a syntax error because <code>Print</code> should be <code>print</code>.</p>
</div>
<span class="comment-copy"><code>print("Hello World!")</code> python3 vs python2 print statements</span>
<span class="comment-copy">You are using <code>Print</code>, not <code>print</code>. Case matters! Python cannot detect that you made the error until the next token is complete (at the end of the string), as the name <code>Print</code> could be combined with some other operator (<code>Print + "Hello World!"</code> would be legal Python syntax).</span>
<span class="comment-copy">Remember to read the every little detail, and pay attention to the WYSS section.</span>
<span class="comment-copy">Jesus, you guys are quick! Thanks a lot everyone, didn't even noticed I used upper cases, gotta get better at spotting the difference. Thanks again and not for getting mad at my stupid mistake!</span>
<span class="comment-copy">Thanks for helping me with my silly mistake! New to this site, should I leave this up for other people or delete the post?</span>
